# crawler-portfolio

./: README.md  pyproject.toml
cwa/: chart-downloader.py  svg-downloader.py
