[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jimmy Lee", email = "jimmylee850328@gmail.com"},
]
dependencies = [
    "cairosvg>=2.7.1",
    "selenium>=4.12.0",
    "bs4>=0.0.1",
    "requests>=2.31.0",
    "imgkit>=1.2.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

